# anvio

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHORS  AUTHORS.txt  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  NEWS.md  README.md  VERSION  WORKFLOW_BUILDER.md  __init__.py  analyzeEntropy.py  blast-log.txt  environment.yml  profile.db  pyproject.toml  refactor_utils_changes.py  requirements.txt  requirements.yml  ruff.toml  setup.py  taxonomy_estimation_tutorial.md  utils_migration_map.py  visualize-report.R  zizmor.yaml
.conda/: environment.yaml
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: bug-report---technical-issue.md  bug-report---technical-problem.md  bug-report.md  feature-request---idea.md  feature-request.md  start-a-discussion.md
.github/workflows/: build-anvio-environment.yaml  ci.yml  component-tests-and-migrations.yaml  component-tests.yaml  daily-component-tests-and-migrations.yaml  database-migrations.yaml  git-hooks.yaml  migrations.yaml  minimal-functionality.yaml  on-demand-component-tests-and-migrations.yaml  test-base.yaml
Dockerfiles/anvio-main/: Dockerfile
Dockerfiles/anvio-structure/: Dockerfile
PAssMePi/: ContigsProfiler.py
PaPi/: __init__.py  annotation.py  ccollections.py  clustering.py  clusteringconfuguration.py  commandline.py  completeness.py  confighandler.py  constants.py  contig.py  contig_composition.py  contig_stats_auxiliary.py  contig_stats_essential.py  db.py  dbops.py  dictio.py  fastalib.py  filesnpaths.py  genes.py  interactive.py  kmers.py  merger.py  metadata.py  parsers.py  profiler.py  sequence.py  sge.py  singlecopy.py  tables.py  terminal.py  utils.py  variability.py
PaPi/parsers/: __init__.py  base.py  concoct.py  defaultmatrix.py  hmmscan.py  myrastcmdline.py  myrastcmdline_do_not_use.py  myrastgui.py  search.py
PaPi/static/: index.html
anvio/: 20190722_export_locus.py  __init__.py  additionaldataops.py  agglomeration.py  alonsclassifier.py  antismash.py  anvi_thread.py  argparse.py  artifacts.py  assemblystats.py  authors.py  auxiliarydataops.py  bamops.py  batchwork.py  bottleroutes.py  bottleroutes_multi.py  cazymes.py  ccollections.py  clusterannotation.py  clustering.py  clusteringconfuguration.py  codonusage.py  cogs.py  commandline.py  completeness.py  concoct.py  constants.py  contig.py  contigops.py  contigpsrofiler.py  contigsprofiler.py  db.py  dbinfo.py  dbops.py  dgrs.py  dictio.py  directedforce.py  discov.py  errors.py  exec.py  (+88 more)
anvio/artifacts/: samples_txt.py  structures_txt.py
anvio/biochemistry/: metabolicmodel.py  protein.py  reactionnetwork.py  refdbs.py
anvio/c/: columnprofile.c
anvio/cli/: add_default_collection.py  analyze_synteny.py  annotate_fragmented_genes.py  as_markdown.py  augustus_output_to_external_gene_calls.py  build_workflow.py  checkm_tree_to_interactive.py  cluster_contigs.py  compare_pan.py  compute_ani.py  compute_ani_for_fasta.py  compute_bayesian_pan_core.py  compute_completeness.py  compute_functional_consensus.py  compute_functional_enrichment.py  compute_functional_enrichment_across_genomes.py  compute_functional_enrichment_in_pan.py  compute_gene_cluster_homogeneity.py  compute_genome_similarity.py  compute_metabolic_enrichment.py  compute_panrep.py  compute_rarefaction_curves.py  compute_trnaseq_functional_affinity.py  db_info.py  delete_collection.py  delete_contig_classification.py  delete_functions.py  delete_hmms.py  delete_misc_data.py  delete_state.py  dereplicate_genomes.py  display_codon_frequencies.py  display_contigs_stats.py  display_functions.py  display_metabolism.py  display_pan.py  display_pan_graph.py  display_structure.py  draw_kegg_pathways.py  estimate_genome_completeness.py  (+176 more)
anvio/codonusage/: frequencyops.py  genomefrequencies.py  genomiccontext.py
docs/: PaPi-Doc.ipynb  README.txt
sandbox/: 00_README.txt  anvi-script-FASTA-to-contigs-db  anvi-script-PCs-to-gene-calls  anvi-script-add-default-collection  anvi-script-add-unknowns-to-pangenome  anvi-script-analyze-metabolic-modules  anvi-script-as-markdown  anvi-script-augustus-output-to-external-gene-calls  anvi-script-calculate-pn-ps-ratio  anvi-script-checkm-tree-to-interactive  anvi-script-classify-hmi-genomes  anvi-script-compute-ani-for-fasta  anvi-script-compute-bayesian-pan-core  anvi-script-convert-annotation-db-to-contigs-db  anvi-script-enrichment-stats  anvi-script-enrichment_analysis.R  anvi-script-estimate-genome-size  anvi-script-estimate-metabolic-independence  anvi-script-filter-fasta-by-blast  anvi-script-filter-hmm-hit-table  anvi-script-filter-hmm-hits-table  anvi-script-find-misassemblies  anvi-script-find-misassembly  anvi-script-fix-homopolymer-indels  anvi-script-gen-CPR-classifier  anvi-script-gen-CPR-model  anvi-script-gen-defense-finder-models-to-hmm-directory  anvi-script-gen-defense-finder-models-to-hmm-directory.py  anvi-script-gen-distribution-of-genes-in-a-bin  anvi-script-gen-environmental-core-summary  anvi-script-gen-function-matrix-across-genomes  anvi-script-gen-functions-per-group-stats-output  anvi-script-gen-genomes-file  anvi-script-gen-help-pages  anvi-script-gen-hmm-hits-matrix-across-genomes  anvi-script-gen-programs-network  anvi-script-gen-programs-vignette  anvi-script-gen-pseudo-paired-reads-from-fastq  anvi-script-gen-scg-domain-classifier  anvi-script-gen-short-reads  (+77 more)
scripts/: anvi-script-enrichment-stats
static/: index.html
test/: HydDB_all_MM2022.hmm  HydDB_all_hydrogenases.faa  database.txt
tests/: 00.sh  mini_test.sh  run_SNV_test.sh  run_all_tests.sh  run_alons-classifier_tests.sh  run_alons_classifier_tests.sh  run_column_profilers_test.py  run_contigs_workflow_tests.sh  run_full_test.sh  run_indel_test.sh  run_manual_interactive.sh  run_metagenomics_workflow_tests.sh  run_metapangenomics_workflow_tests.sh  run_mini_test.sh  run_mini_test_wo_concoct.sh  run_multi.sh  run_pangenome_tests.sh  run_pangenomics_workflow_tests.sh  run_server_test.sh  run_sf_test.sh  run_structure_mock.sh  run_variability_mock.sh  run_workflows_tests.sh  test_column_profile.py  test_server
(+2096 files in other folders)
